--- a/bd/package.json
+++ b/bd/package.json
@@ -1,12 +1,27 @@
 {
   "name": "bd",
   "version": "1.0.0",
-  "description": "",
+  "description": "programa de desarrollo web",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "nodemon src/server.ts --exec ts-node"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@types/morgan": "^1.9.3",
+    "@types/sequelize": "^4.28.10",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.2",
+    "nodemon": "^2.0.13",
+    "sequelize": "^6.7.0",
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
+  }
 }
